--- a/headlines.html
+++ b/headlines.html
@@ -1,7 +1,7 @@
 <title>Headlines for Quizzes</title>
 <head><script type="text/javascript">
   function clear(element) {
-    document.getElementById(element).innerHTML=""
+    document.getElementById(element).innerHTML="";
   }
   function moarsept18() {
     if (document.getElementById("moar1").innerHTML !== "") {
