--- a/headlines.html
+++ b/headlines.html
@@ -21,7 +21,7 @@
   }
 </script>
 <h1>Ah yes! Headlines!</h1>
-<font size="1">This site is not an official FCPS website. It's also super poorly designed, in that there is no design.</font>
+<font size="1">This site is not an official FCPS website or approved by Mr. Franz. It's also super poorly designed, in that there is no design.</font>
 <br/><br/>
 <h1>September 18 - NY Times</h1>
 <br/>
