--- a/headlines.html
+++ b/headlines.html
@@ -2,7 +2,7 @@
 <head><script type="text/javascript">
 
   function moarsept18() {
-         document.getElementById("moar1").innerHTML="<b>Scottish Vote Weighs Pride Against Risk</b><br/>Basically, do they split from the UK or not. There's economic risk. They did it. YOLO<br/><br/><br/><b>Women’s Views on N.F.L. Dim</b><br/>Women don't like the NFL because the NFL is being hella controversial tbh.<br/><br/><br/><b>Surrogates and Couples Face A Maze of Laws, State by State</b><br/>After a drama with a couple who wanted a surrogate carrying their child to have an abortion,<br/>they went on a state-to-state legal race. This brought up the controversy of surrogates in the US (when you pay someone fertile to carry your child)A relatively one sided vote, the House voted to arm Syrian rebels to fight against the militant Islamist State (soooo ISIL?<br/><br/><br/>"; 
+         document.getElementById("moar1").innerHTML="</br><b>Scottish Vote Weighs Pride Against Risk</b><br/>Basically, do they split from the UK or not. There's economic risk. They did it. YOLO<br/><br/><br/><b>Women’s Views on N.F.L. Dim</b><br/>Women don't like the NFL because the NFL is being hella controversial tbh.<br/><br/><br/><b>Surrogates and Couples Face A Maze of Laws, State by State</b><br/>After a drama with a couple who wanted a surrogate carrying their child to have an abortion,<br/>they went on a state-to-state legal race. This brought up the controversy of surrogates in the US (when you pay someone fertile to carry your child)A relatively one sided vote, the House voted to arm Syrian rebels to fight against the militant Islamist State (soooo ISIL?<br/><br/><br/>"; 
     }
   function moarsept181() {
    document.getElementById("moar2").innerHTML="<br/><b>Apple devices to lock out police</b></br>Basically, they reworked their encryption so they don't have the key.<br/><i>Opinion: This is a bro move on the off chance they actually did it.</i></br><b>Nickels and dimes add up for airline</b></br>Basically Spirit Airlines is cheap but fees are killer.</br><b>Scottish independence movement thrives on rage against Westminster</b></br>Same story as the NY Times one.";
@@ -11,7 +11,7 @@
    document.getElementById("moar3").innerHTML="</br><b>Where Health Law Helps Voters but Saps Votes</b></br>The insurance plan isn't doing terrible, but everyone still hates Obama for it in the polls.</br><b>Shiite Militias Pose Challenge For U.S. in Iraq</b></br>Former enemy milita groups in Iraq are now helping with ISIL, but we refuse to work with them.";
   }
   function moarsept171() {
-   document.getElementById("moar4").innerHTML="<b>Bowser’s foes target her record on council</b></br>There's a lot of doubt as to whether or not DC candidate Bowser is making sigificant reform.</br><b>Relief from D.C.’s gridlock, 10,000 steps at a time</b></br>Basic piece on the life of Reps in DC.</br><b>In Iowa, a tipping point for Senate?</b></br>The midterm campaign in Iowa is super close in the Senate.</br><b>A rising symbol to keep Britain solid as a rock</b></br>Talks about UK relations.</br>";   
+   document.getElementById("moar4").innerHTML="</br><b>Bowser’s foes target her record on council</b></br>There's a lot of doubt as to whether or not DC candidate Bowser is making sigificant reform.</br><b>Relief from D.C.’s gridlock, 10,000 steps at a time</b></br>Basic piece on the life of Reps in DC.</br><b>In Iowa, a tipping point for Senate?</b></br>The midterm campaign in Iowa is super close in the Senate.</br><b>A rising symbol to keep Britain solid as a rock</b></br>Talks about UK relations.</br>";   
   }
 </script>
 <h1>Ah yes! Headlines!</h1>
@@ -47,7 +47,7 @@ Relatively self-explainatory.hundreds of thousands of lives. “This epidemic is
 
 <h1>September 17 - WashPo</h1>
 <b><img src="http://img3.wikia.nocookie.net/__cb20100701113752/fantendo/images/f/f6/Power_Star_Icon_SMR.png" width="16" height="16" />Combat role is not off table</b></br>
-US Special Forces are not off the table for the fight against ISIL.
+US Special Forces are not off the table for the fight against ISIL.</br>
 <input type="button" value="Moar plis" onClick="javascript:moarsept171()">
 <span id="moar4"></span></br>
 
