edit out the last week

--- a/headlines.html
+++ b/headlines.html
@@ -1,5 +1,7 @@
 <title>Headlines for Quizzes</title>
-<head><script type="text/javascript">
+<head>
+<!--
+<script type="text/javascript">
 
   function moarsept18() {
          document.getElementById("moar1").innerHTML="</br><b>Scottish Vote Weighs Pride Against Risk</b><br/>Basically, do they split from the UK or not. There's economic risk. They did it. YOLO<br/><br/><br/><b>Women’s Views on N.F.L. Dim</b><br/>Women don't like the NFL because the NFL is being hella controversial tbh.<br/><br/><br/><b>Surrogates and Couples Face A Maze of Laws, State by State</b><br/>After a drama with a couple who wanted a surrogate carrying their child to have an abortion,<br/>they went on a state-to-state legal race. This brought up the controversy of surrogates in the US (when you pay someone fertile to carry your child)A relatively one sided vote, the House voted to arm Syrian rebels to fight against the militant Islamist State (soooo ISIL?<br/><br/><br/>"; 
@@ -13,10 +15,13 @@
   function moarsept171() {
    document.getElementById("moar4").innerHTML="</br><b>Bowser’s foes target her record on council</b></br>There's a lot of doubt as to whether or not DC candidate Bowser is making sigificant reform.</br><b>Relief from D.C.’s gridlock, 10,000 steps at a time</b></br>Basic piece on the life of Reps in DC.</br><b>In Iowa, a tipping point for Senate?</b></br>The midterm campaign in Iowa is super close in the Senate.</br><b>A rising symbol to keep Britain solid as a rock</b></br>Talks about UK relations.</br>";   
   }
+
 </script>
+-->
 <h1>Ah yes! Headlines!</h1>
 <font size="1">This site is not an official FCPS website or approved by Mr. Franz. It's also super poorly designed, in that there is no design.</font>
 <br/><br/>
+<!--
 <h1>September 18 - NY Times</h1>
 <br/>
 <br/>
@@ -51,7 +56,7 @@ US Special Forces are not off the table for the fight against ISIL.</br>
 <input type="button" value="Moar plis" onClick="javascript:moarsept171()">
 <span id="moar4"></span></br>
 
-
+-->
 <b></b></br></br>
 
 
