--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						<h2>My Work Experience<br />
 						Past and Current</h2>
 					</header>
-					<p>I got my initial work experience at a pool. I spent a few years as a lifeguard, mainly working at Cardinal Hill. I worked officially under Crystal Aquatics, who had a contract with Cardinal Hill. I got promoted to manager duties towards the end of 2013 and managed the staff/pool facilities.</br>I currently work for Metier Defense Solutions</br></p>
+					<p>I got my initial work experience at a pool. I spent a few years as a lifeguard, mainly working at Cardinal Hill. I worked officially under Crystal Aquatics, who had a contract with Cardinal Hill. I got promoted to manager duties towards the end of 2013 and managed the staff/pool facilities.</br>I worked for <a href="http://www.metierdefense.com/">Metier Defense Solutions</a> over the summer.</br></p>
 				</br><a href="#awards" class="button style2 scrolly">Competitive Awards</a>
 				</div>
 			</article>
