--- a/index.html
+++ b/index.html
@@ -101,7 +101,13 @@
 					</div> 
 				</div> -->
 			</article>
-		
+			<article id="first" class="container box style1 right">
+	<div class="inner">
+		<header>
+			<h2>Personal Interests</h2>
+		</header>
+	</div>
+			</article>
 		<!-- Contact -->
 			<article class="container box style3">
 				<header>
