--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
 				</div> -->
 			</article>
 			<article id="first" class="container box style1 right">
+				<img src="http://www.nhlpa93.nhl94.com/teams/images/wsh.gif" />
 	<div class="inner">
 		<header>
 			<h2>Personal Interests</h2>
