Not bold, paragraph silly!

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 		<header>
 			<h2>Personal Interests</h2>
 		</header>
-   			<b>I have a major interest in the <b>Washington Capitals</b>. I went to about 20 games last year, 7 out of 12 so far this year, and have a ticket to the 2015 Winter Classic. Additionally, I have a history of enjoying swimming. I have two varsity letters in <b>swimming</b>, quit junior year to focus on studies, and came back as a manager senior year.</b>
+   			<p>I have a major interest in the <b>Washington Capitals</b>. I went to about 20 games last year, 7 out of 12 so far this year, and have a ticket to the 2015 Winter Classic. Additionally, I have a history of enjoying swimming. I have two varsity letters in <b>swimming</b>, quit junior year to focus on studies, and came back as a manager senior year.</p>
 	</div>
 			</article>
 		<!-- Contact -->
