--- a/index.html
+++ b/index.html
@@ -102,13 +102,23 @@
 				</div> -->
 			</article>
 			<article id="first" class="container box style1 right">
-				<img src="http://www.nhlpa93.nhl94.com/teams/images/wsh.gif" />
 	<div class="inner">
 		<header>
 			<h2>Personal Interests</h2>
 		</header>
    			<p>I have a major interest in the <b>Washington Capitals</b>. I went to about 20 games last year, 7 out of 12 so far this year, and have a ticket to the 2015 Winter Classic. Additionally, I have a history of enjoying swimming. I have two varsity letters in <b>swimming</b>, quit junior year to focus on studies, and came back as a manager senior year.</p>
 	</div>
+			</article>
+			<article id="first" class="container box style1 right">
+				<a href="http://www.crystalaquatics.com/" class="image full"><img src=http://www.nhlpa93.nhl94.com/teams/images/wsh.gif align="center" alt="NHL Capitals" /></a>
+				<div class="inner">
+					<header>
+						<h2>My Work Experience<br />
+						Past and Current</h2>
+					</header>
+					<p>I got my initial work experience at a pool. I spent a few years as a lifeguard, mainly working at Cardinal Hill. I worked officially under Crystal Aquatics, who had a contract with Cardinal Hill. I got promoted to manager duties towards the end of 2013 and managed the staff/pool facilities.</br>I worked for <a href="http://www.metierdefense.com/">Metier Defense Solutions</a> over the summer.</br></p>
+				</br><a href="#awards" class="button style2 scrolly">Competitive Awards</a>
+				</div>
 			</article>
 		<!-- Contact -->
 			<article class="container box style3">
