--- a/headlines-old1.html
+++ b/headlines-old1.html
@@ -1,6 +1,7 @@
 <title>Headlines for Quizzes</title>
 <head>
 <!--
+// Test DNS propogation
 <script type="text/javascript">
 
   function moarsept18() {
