Update index.html - it borked

--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
 		</header>
    			<p>I have a major interest in the <b>Washington Capitals</b>. I went to about 20 games last year, 7 out of 12 so far this year, and have a ticket to the 2015 Winter Classic. Additionally, I have a history of enjoying swimming. I have two varsity letters in <b>swimming</b>, quit junior year to focus on studies, and came back as a manager senior year.</p>
 	</div>
-			</article>-->
+			</article>
 			<article id="first" class="container box style1 right">
-				<a href="http://www.crystalaquatics.com/" class="image full"><img src=http://www.nhlpa93.nhl94.com/teams/images/wsh.gif align="center" alt="NHL Capitals" /></a>
+				<a href="http://www.crystalaquatics.com/" class="image full"><img src=http://www.nhlpa93.nhl94.com/teams/images/wsh.gif align="center" alt="NHL Capitals" /></a> -->
 				<div class="inner">
 					<header>
 						<h2>My Work Experience<br />
