--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 	</div>
 			</article>
 			<article id="first" class="container box style1 right">
-				<a href="http://www.crystalaquatics.com/" class="image full"><img src=http://www.nhlpa93.nhl94.com/teams/images/wsh.gif align="center" alt="NHL Capitals" /></a> -->
+				<!-- <a href="http://www.crystalaquatics.com/" class="image full"><img src=http://www.nhlpa93.nhl94.com/teams/images/wsh.gif align="center" alt="NHL Capitals" /></a> -->
 				<div class="inner">
 					<header>
 						<h2>My Work Experience<br />
