--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 		<title>Mike's Page</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
+<script>
+alert("Please note site is under construction after DNS changes and other unrelated issues")
+</script>
 		<meta name="keywords" content="" />
 		<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,300italic" rel="stylesheet" type="text/css" />
 		<link href="/favicon.ico" rel="shortcut icon" type="image/x-icon">
