fun with previous commits
ROOOLLLL BACK </3

--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
 		<title>Mike's Page</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
-<script>
-alert("Please note site is under construction after DNS changes and other unrelated issues")
-</script>
 		<meta name="keywords" content="" />
 		<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,300italic" rel="stylesheet" type="text/css" />
 		<link href="/favicon.ico" rel="shortcut icon" type="image/x-icon">
@@ -103,32 +100,22 @@ alert("Please note site is under construction after DNS changes and other unrela
 						<div class="3u"><a href="images/fulls/08.jpg" class="image full"><img src="images/thumbs/08.jpg" alt="" title="People come and go and walk away" /></a></div>
 					</div> 
 				</div> -->
-			</article> <!--
+			</article>
 			<article id="first" class="container box style1 right">
+				<img src="http://www.nhlpa93.nhl94.com/teams/images/wsh.gif" />
 	<div class="inner">
 		<header>
 			<h2>Personal Interests</h2>
 		</header>
-   			<p>I have a major interest in the <b>Washington Capitals</b>. I went to about 20 games last year, 7 out of 12 so far this year, and have a ticket to the 2015 Winter Classic. Additionally, I have a history of enjoying swimming. I have two varsity letters in <b>swimming</b>, quit junior year to focus on studies, and came back as a manager senior year.</p>
+   			<b>I have a major interest in the <b>Washington Capitals</b>. I went to about 20 games last year, 7 out of 12 so far this year, and have a ticket to the 2015 Winter Classic. Additionally, I have a history of enjoying swimming. I have two varsity letters in <b>swimming</b>, quit junior year to focus on studies, and came back as a manager senior year.</b>
 	</div>
-			</article>
-			<article id="first" class="container box style1 right">
-				<!-- <a href="http://www.crystalaquatics.com/" class="image full"><img src=http://www.nhlpa93.nhl94.com/teams/images/wsh.gif align="center" alt="NHL Capitals" /></a> -->
-				<div class="inner">
-					<header>
-						<h2>My Work Experience<br />
-						Past and Current</h2>
-					</header>
-					<p>I got my initial work experience at a pool. I spent a few years as a lifeguard, mainly working at Cardinal Hill. I worked officially under Crystal Aquatics, who had a contract with Cardinal Hill. I got promoted to manager duties towards the end of 2013 and managed the staff/pool facilities.</br>I worked for <a href="http://www.metierdefense.com/">Metier Defense Solutions</a> over the summer.</br></p>
-				</br><a href="#awards" class="button style2 scrolly">Competitive Awards</a>
-				</div>
 			</article>
 		<!-- Contact -->
 			<article class="container box style3">
 				<header>
 					<h2>Where to go from here?</h2>
-					<p>You can download my resume at a temporary link <a href="/resume.pdf">here</a>, but please note this is the last place I update it. Contact me with the information provided. Please do not spam, there are special countermeasures in place.
-Here are a few things I did not put on my conventional resume: </br><ul><li>I've been working with HTML since the age of 10</li><li>I've visited multiple companies and agencies IT and/or network security departments, including, but not exclusive to, <I>ComScore, inc.</I>, <I>Department of Veterans Affairs</I>, <I>Lockheed Martin (namely their nexgen facilities, including their security center)</I><li>Varsity Swimmer of 2 Years</li><li>CodeDay (DC) 2014 Attendee</li><li>DefCon 22 (Vegas) Planned Attendee</li><li>GEOINT 2013 (Tampa) Attendee</li><li>Gave speeches at multiple area high school's about Marshall Academy's STEM program recently</li><li>Wrote a 20 page guide on the security of Ubuntu workstations, with supplemental pages on server roles</li></ul></p>
+					<p>You can download my resume at a temporary link <a href="/resume.pdf">here</a> and contact me with the information provided. Please do not spam, there are special countermeasures in place.
+Here are a few things I did not put on my conventional resume: </br><ul><li>I've been working with HTML since the age of 10</li><li>I've visited multiple companies and agencies IT and/or network security departments, including, but not exclusive to, <I>ComScore, inc.</I>, <I>Department of Veterans Affairs</I>, <I>Lockheed Martin (namely their nexgen facilities, including their security center)</I><li>Varsity Swimmer of 2 Years</li><li>CodeDay (DC) 2014 Attendee</li><li>DefCon 22 (Vegas) Planned Attendee</li><li>GEOINT 2013 (Tampa) Attendee</li><li>Gave a speech to a high school's STEM program recently</li><li>Wrote a 20 page guide on the security of Ubuntu workstations, with supplemental pages on server roles</li></ul></p>
 				</header> <!-- I currently have zero use for a message form
 				<form>
 					<div class="row half">
@@ -151,7 +138,162 @@ Here are a few things I did not put on my conventional resume: </br><ul><li>I've
 		-->
 			</article>
 
-
+		<!-- Generic -->
+		<!--
+			<article class="container box style3">
+				<header>
+					<h2>Generic Box</h2>
+					<p>Just a generic box. Nothing to see here.</p>
+				</header>
+				<section>
+					<header>
+						<h3>Paragraph</h3>
+						<p>This is a byline</p>
+					</header>
+					<p>Phasellus nisl nisl, varius id <sup>porttitor sed pellentesque</sup> ac orci. Pellentesque 
+					habitant <strong>strong</strong> tristique <b>bold</b> et netus <i>italic</i> malesuada <em>emphasized</em> ac turpis egestas. Morbi 
+					leo suscipit ut. Praesent <sub>id turpis vitae</sub> turpis pretium ultricies. Vestibulum sit 
+					amet risus elit.</p>
+				</section>
+				<section>
+					<header>
+						<h3>Blockquote</h3>
+					</header>
+					<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget.
+					tempus euismod. Vestibulum ante ipsum primis in faucibus.</blockquote>
+				</section>
+				<section>
+					<header>
+						<h3>Divider</h3>
+					</header>
+					<p>Donec consectetur <a href="#">vestibulum dolor et pulvinar</a>. Etiam vel felis enim, at viverra 
+					ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci 
+					facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam 
+					tempus euismod. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices 
+					posuere cubilia.</p>
+					<hr />
+					<p>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra 
+					ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci 
+					facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam 
+					tempus euismod. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices 
+					posuere cubilia.</p>
+				</section>
+				<section>
+					<header>
+						<h3>Unordered List</h3>
+					</header>
+					<ul class="default">
+						<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
+						<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
+						<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
+						<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
+					</ul>
+				</section>
+				<section>
+					<header>
+						<h3>Ordered List</h3>
+					</header>
+					<ol class="default">
+						<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
+						<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
+						<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
+						<li>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel.</li>
+					</ol>
+				</section>
+				<section>
+					<header>
+						<h3>Table</h3>
+					</header>
+					<div class="table-wrapper">
+						<table class="default">
+							<thead>
+								<tr>
+									<th>ID</th>
+									<th>Name</th>
+									<th>Description</th>
+									<th>Price</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td>45815</td>
+									<td>Something</td>
+									<td>Ut porttitor sagittis lorem quis nisi ornare.</td>
+									<td>29.99</td>
+								</tr>
+								<tr>
+									<td>24524</td>
+									<td>Nothing</td>
+									<td>Ut porttitor sagittis lorem quis nisi ornare.</td>
+									<td>19.99</td>
+								</tr>
+								<tr>
+									<td>45815</td>
+									<td>Something</td>
+									<td>Ut porttitor sagittis lorem quis nisi ornare.</td>
+									<td>29.99</td>
+								</tr>
+								<tr>
+									<td>24524</td>
+									<td>Nothing</td>
+									<td>Ut porttitor sagittis lorem quis nisi ornare.</td>
+									<td>19.99</td>
+								</tr>
+							</tbody>
+							<tfoot>
+								<tr>
+									<td colspan="3"></td>
+									<td>100.00</td>
+								</tr>
+							</tfoot>
+						</table>
+					</div>
+				</section>
+				<section>
+					<header>
+						<h3>Form</h3>
+					</header>
+					<form method="post" action="#">
+						<div class="row">
+							<div class="6u">
+								<input class="text" type="text" name="name" id="name" value="" placeholder="John Doe" />
+							</div>
+							<div class="6u">
+								<input class="text" type="text" name="email" id="email" value="" placeholder="johndoe@domain.tld" />
+							</div>
+						</div>
+						<div class="row">
+							<div class="12u">
+								<select name="department" id="department">
+									<option value="">Choose a department</option>
+									<option value="1">Manufacturing</option>
+									<option value="2">Administration</option>
+									<option value="3">Support</option>
+								</select>
+							</div>
+						</div>
+						<div class="row">
+							<div class="12u">
+								<input class="text" type="text" name="subject" id="subject" value="" placeholder="Enter your subject" />
+							</div>
+						</div>
+						<div class="row">
+							<div class="12u">
+								<textarea name="message" id="message" placeholder="Enter your message"></textarea>
+							</div>
+						</div>
+						<div class="row">
+							<div class="12u">
+								<ul class="actions">
+									<li><a href="#" class="button form">Submit</a></li>
+									<li><a href="#" class="button style3 form-reset">Clear Form</a></li>
+								</ul>
+							</div>
+						</div>
+					</form>
+				</section>
+			</article>
+		-->
 		
 		<section id="footer">
 			<ul class="icons">
