--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 			</article>
 			<article id="first" class="container box style1 right">
 			<div class="inner">
-				<img src="images/personalinterests.png" />
+				<a href="http://www.capitals.nhl.com/" class="image full"><img src="images/personalinterests.png" align="center" /></a>
 	
 		<header>
 			<h2>Personal Interests</h2>
