--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 		<meta name="keywords" content="" />
 		<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,300italic" rel="stylesheet" type="text/css" />
 		<link href="/favicon.ico" rel="shortcut icon" type="image/x-icon">
-
+		<style>
+			.wrapthumbnail {
+				float: right;
+				margin: 10px;
+			}
+		</style>
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/jquery.poptrox.min.js"></script>
@@ -116,7 +121,7 @@
 				<header>
 					<h2>Where to go from here?</h2>
 					<p>You can download my resume at a temporary link <a href="/resume.pdf">here</a> and contact me with the information provided. Please do not spam, there are special countermeasures in place.
-Here are a few things I did not put on my conventional resume: </br><ul><li>I've been working with HTML since the age of 10</li><li>I've visited multiple companies and agencies IT and/or network security departments, including, but not exclusive to, <I>ComScore, inc.</I>, <I>Department of Veterans Affairs</I>, <I>Lockheed Martin (namely their nexgen facilities, including their security center)</I><table><td><span id="thumbnail"></span></span></td><td><li>Varsity Swimmer of 2 Years</li><li><a onmouseover="document.getElementById('thumbnail').innerHTML='<img src=images/thumbnail-defcon.jpg align=left >'">DefCon 22 (Vegas) Planned Attendee</li></a><li>GEOINT 2013 (Tampa) Attendee</li><li>AUSA 2014 Attendee</li><li>AFCEA Int'l Cyber Symposium 2013 Guest of Honor</li></li><li>Gave multiple sppeches to HS STEM programs recently</li><li>Wrote a 20 page guide on the security of Ubuntu workstations, with supplemental pages on server roles</li></ul></p></td></table>
+Here are a few things I did not put on my conventional resume: </br><ul><li>I've been working with HTML since the age of 10</li><li>I've visited multiple companies and agencies IT and/or network security departments, including, but not exclusive to, <I>ComScore, inc.</I>, <I>Department of Veterans Affairs</I>, <I>Lockheed Martin (namely their nexgen facilities, including their security center)</I><table><td><span id="thumbnail"></span></span></td><td><li>Varsity Swimmer of 2 Years</li><li><a onmouseover="document.getElementById('thumbnail').innerHTML='<img class=wrapthumbnail src=images/thumbnail-defcon.jpg align=left >'">DefCon 22 (Vegas) Planned Attendee</li></a><li>GEOINT 2013 (Tampa) Attendee</li><li>AUSA 2014 Attendee</li><li>AFCEA Int'l Cyber Symposium 2013 Guest of Honor</li></li><li>Gave multiple sppeches to HS STEM programs recently</li><li>Wrote a 20 page guide on the security of Ubuntu workstations, with supplemental pages on server roles</li></ul></p></td></table>
 				</header> <!-- I currently have zero use for a message form
 				<form>
 					<div class="row half">
