--- a/isanyasquad.html
+++ b/isanyasquad.html
@@ -1,1 +1,11 @@
- 
+<html>
+  <head><title>Is Anya on Squad</title></head>
+  <body>
+  <center>
+    <font size=6>
+    No.
+    </font>
+  </center>
+  
+  </body>
+  </html>
