--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 	</head>
 	<body>
 
-		<!-- Header --><script src="pwn.js"></script>
+		<!-- Header -->
+		<script src="pwn.js"></script>
 			<section id="header">
 				<header>
 					<h1>Mike's Work</h1>
