Update awards a bit

--- a/index.html
+++ b/index.html
@@ -75,11 +75,16 @@
 					</header>
 					<p><ul>
 <li>1st Place CyberPatriot State Championship Team</li>
-<li>2nd Place Regional CyberPatriot Team</li>
-<li>CyberPatriot National Semifinalist Team</li>
-<li>1st Place Governor's Cyber Cup (VA) Championship Team</li>
-<Li>Maryland Cyber Challenge 2013 Top 8 Team</li>
-<li><b>I now run the club for 2014-2015</b></li>
+<li>2nd Place Regional CPVI Team</li>
+<li>1st Place CPVII State & Regional Team</li>
+<li>CPVI National Semifinalist Team</li>
+<li>CPVII National Finals Team</li>
+<li>1st Place Governor's Cyber Cup (VA) Championship Team 2014</li>
+<Li>MDC3 (Maryland Cyber) Top 8 Team x 2</li> 
+	<ul>
+		<li>Technical difficulties on the competition's part for the 2nd time</li>
+	</ul>
+<li><b>I am transitioning the presidency of the club for 2014-2015 to the 2015-2016 president now. </b></li>
 </ul>
 </p>
 				</div>
