Update awards more

--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
 <li>1st Place CPVII State & Regional Team</li>
 <li>CPVI National Semifinalist Team</li>
 <li>CPVII National Finals Team</li>
-<li>1st Place Governor's Cyber Cup (VA) Championship Team 2014</li>
-<Li>MDC3 (Maryland Cyber) Top 8 Team x 2</li> 
+<li>1st Place Governor's Cyber Cup Championship Team 2014</li>
+<Li>MDC3 Top 8 Team Twice*</li> 
 	<ul>
-		<li>Technical difficulties on the competition's part for the 2nd time</li>
+		<li><font size=1><a href="https://medium.com/@michaelbailey/why-we-dont-count-maryland-cyber-challenge-f741f0c2103">*Technical difficulties on the competition's part for the 2nd time</a></font></li>
 	</ul>
 <li><b>I am transitioning the presidency of the club for 2014-2015 to the 2015-2016 president now. </b></li>
 </ul>
