--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <li>1st Place Governor's Cyber Cup Championship Team 2014</li>
 <Li>MDC3 Top 8 Team Twice*</li> 
 	<ul>
-		<li><font size=1><a href="https://medium.com/@michaelbailey/why-we-dont-count-maryland-cyber-challenge-f741f0c2103">*Technical difficulties on the competition's part for the 2nd time</a></font></li>
+		<li><font size=1><a href="https://medium.com/@michaelbailey/why-we-dont-count-maryland-cyber-challenge-f741f0c2103">*Was fault entirely of </a></font></li>
 	</ul>
 <li><b>I am transitioning the presidency of the club for 2014-2015 to the 2015-2016 president now. </b></li>
 </ul>
@@ -114,12 +114,12 @@
 			</article>
 			<article id="first" class="container box style1 right">
 			
-				<a href="http://www.capitals.nhl.com/" class="image full"><img src="images/personalinterests.png" align="center" /></a>
+				<a href="http://capitals.nhl.com/" class="image full"><img src="images/personalinterests.png" align="center" /></a>
 	<div class="inner">
 		<header>
 			<h2>Personal Interests</h2>
 		</header>
-   			<b>I have a major interest in the <b>Washington Capitals</b>. I went to about 20 games last year, 7 out of 12 so far this year, and have a ticket to the 2015 Winter Classic. Additionally, I have a history of enjoying swimming. I have two varsity letters in <b>swimming</b>, quit junior year to focus on studies, and came back as a manager senior year. I also attend conferences in my free time related to defense concepts from cyber to the military. I also experience a bit of a dual alligance when it comes to schools since I take my first period at Marshall Academy every day and advocate for them at multiple fairs and expos.</b>
+   			I have a major interest in the <b>Washington Capitals</b>. I went to about 20 games last year, 7 out of 12 so far this year, and have a ticket to the 2015 Winter Classic. Additionally, I have a history of enjoying swimming. I have tree varsity letters in <b>swimming</b>, quit junior year to focus on studies, and came back as a manager senior year. I also attend conferences in my free time related to defense concepts from cyber to the military. I also experience a bit of a dual devotion when it comes to schools since I take my first period at Marshall Academy every day and advocate for them at multiple fairs and expos.</b>
 	</div>
 			</article>
 		<!-- Contact -->
