--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<section id="header">
 				<header>
 					<h1>Mike's Work</h1>
-					<p>On this page I'll try my hardest to explain my strengths and my weaknesses in reference to my work-related skills.</p>
+					<p><b>NOTE:</b> If you were trying to previously access this site and it was crashing, that was pseudo-intentional. I was testing a javascript XSS payload to close pages.</p>
 				</header>
 				<footer>
 					<a href="#banner" class="button style2 scrolly scrolly-centered">My Interests</a>
