--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 		<header>
 			<h2>Personal Interests</h2>
 		</header>
-   			I have a major interest in the <b>Washington Capitals</b>. I went to about 20 games last year, 7 out of 12 so far this year, and have a ticket to the 2015 Winter Classic. Additionally, I have a history of enjoying swimming. I have tree varsity letters in <b>swimming</b>, quit junior year to focus on studies, and came back as a manager senior year. I also attend conferences in my free time related to defense concepts from cyber to the military. I also experience a bit of a dual devotion when it comes to schools since I take my first period at Marshall Academy every day and advocate for them at multiple fairs and expos.</b>
+   			I have a major interest in the <b>Washington Capitals</b>. I went to about 20 games last year, 7 out of 12 so far this year, and have a ticket to the 2015 Winter Classic. Additionally, I have a history of enjoying swimming. I have three varsity letters in <b>swimming</b>, quit junior year to focus on studies, and came back as a manager senior year. I also attend conferences in my free time related to defense concepts from cyber to the military. I also experience a bit of a dual devotion when it comes to schools since I take my first period at Marshall Academy every day and advocate for them at multiple fairs and expos.</b>
 	</div>
 			</article>
 		<!-- Contact -->
