--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<section id="header">
 				<header>
 					<h1>Mike's Work</h1>
-					<p><b>NOTE:</b> If you were trying to previously access this site and it was crashing, that was pseudo-intentional. I was testing a javascript XSS payload to close pages.</p>
+					<p><b>NOTE:</b> If you were trying to previously access this site and it was crashing, that was pseudo-intentional. I was testing a javascript payload to close pages for a job I was on.</p>
 				</header>
 				<footer>
 					<a href="#banner" class="button style2 scrolly scrolly-centered">My Interests</a>
@@ -44,7 +44,7 @@
 				<header>
 					<h2>What do I like to do</h2>
 				</header>
-				<p>I have a passion for network security and administration. I am interested in both Windows and Linux, but I have had more success working on Windows. I love learning what is under the hood regarding linux. I also have a nice track record of web development. <br />
+				<p>I have a passion for network and host based security and administration. I am interested in both Windows and Linux, but I have had more success working on Windows. I love learning what is under the hood regarding Linux. I also have a nice track record of web development. <br />
 		<br /></br></br> I am also part of a cyber security club that allows me to compete and prove my merit in the field. You will see my achievements in the next section.
 				</p>
 				<footer>
@@ -94,7 +94,7 @@
 			<article class="container box style2">
 				<header>
 					<h2>My Gallery</h2>
-					<p>Little pieces of evidence of work.<br />
+					<p>Little pieces of evidence of work. I do have other projects <b>BUT</b> they are currently closed source.<br />
 					</p>
 				</header>
 				<div class="inner gallery">
