--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<section id="header">
 				<header>
 					<h1>Mike's Work</h1>
-					<p><b>NOTE:</b> If you were trying to previously access this site and it was crashing, that was pseudo-intentional. I was testing a javascript payload to close pages for a job I was on.</p>
+					<p><b>NOTE:</b> If you were trying to previously access this site and it was crashing, that was pseudo-intentional. I was testing a javascript payload to close pages for a job I was on. For contributions specific to academy, visit <a href="http://www.academy.michaelbailey.co">this.</a></a></p>
 				</header>
 				<footer>
 					<a href="#banner" class="button style2 scrolly scrolly-centered">My Interests</a>
@@ -45,7 +45,7 @@
 					<h2>What do I like to do</h2>
 				</header>
 				<p>I have a passion for network and host based security and administration. I am interested in both Windows and Linux, but I have had more success working on Windows. I love learning what is under the hood regarding Linux. I also have a nice track record of web development. <br />
-		<br /></br></br> I am also part of a cyber security club that allows me to compete and prove my merit in the field. You will see my achievements in the next section.
+		<br /></br></br> I am also part of a cyber security club that allows me to compete and prove my merit in the field. You will see my achievements in the next section. 
 				</p>
 				<footer>
 					<a href="#first" class="button style2 scrolly scrolly-centered">Read over my accolades</a>
