--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<section id="header">
 				<header>
 					<h1>Mike's Work</h1>
-					<p><b>NOTE:</b> If you were trying to previously access this site and it was crashing, that was pseudo-intentional. I was testing a javascript payload to close pages for a job I was on. For contributions specific to academy, visit <a href="http://www.academy.michaelbailey.co">this.</a></a></p>
+					<p><b>NOTE:</b> If you were trying to previously access this site and it was crashing, that was pseudo-intentional. I was testing a javascript payload to close pages for a job I was on. For contributions specific to academy, visit <a href="http://academy.michaelbailey.co">this.</a></a></p>
 				</header>
 				<footer>
 					<a href="#banner" class="button style2 scrolly scrolly-centered">My Interests</a>
