--- a/index.html
+++ b/index.html
@@ -103,12 +103,15 @@
 						<div class="3u"><a href="images/robotics.jpg" class="image full"><img src="images/robotics.jpg" alt="" title="This is a robotics site I secured and tinkered with, entirely in custom HTML/PHP with a SQL backend." /></a></div>
 						<div class="3u"><a href="images/healthytactics.jpg" class="image full"><img src="images/healthytactics.jpg" alt="" title="HealthyTactics, a site I work on a little for my mother. I mainly modify the content per her request, which is rare." /></a></div>
 						<div class="3u"><a href="images/govcup.jpg" class="image full"><img src="images/govcup.jpg" alt="" title="Gov Cup 2014" /></a></div>
+						<div class="3u"><a href="images/lrn2cyber.png" class="image full"><img src="images/lrn2cyber.png" alt="" title="lrn2cyber: Cyber Education Platform from Scratch" /></a></div>
+						
 					</div> <!-- 
 					<div class="row flush">
 						<div class="3u"><a href="images/fulls/05.jpg" class="image full"><img src="images/thumbs/05.jpg" alt="" title="Cherish" /></a></div>
 						<div class="3u"><a href="images/fulls/06.jpg" class="image full"><img src="images/thumbs/06.jpg" alt="" title="Different." /></a></div>
 						<div class="3u"><a href="images/fulls/07.jpg" class="image full"><img src="images/thumbs/07.jpg" alt="" title="History was made here" /></a></div>
 						<div class="3u"><a href="images/fulls/08.jpg" class="image full"><img src="images/thumbs/08.jpg" alt="" title="People come and go and walk away" /></a></div>
+						
 					</div> 
 				</div> -->
 			</article>
