--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
 						<div class="3u"><a href="images/healthytactics.jpg" class="image full"><img src="images/healthytactics.jpg" alt="" title="HealthyTactics, a site I work on a little for my mother. I mainly modify the content per her request, which is rare." /></a></div>
 						<div class="3u"><a href="images/govcup.jpg" class="image full"><img src="images/govcup.jpg" alt="" title="Gov Cup 2014" /></a></div>
 						<div class="3u"><a href="images/lrn2cyber.png" class="image full"><img src="images/lrn2cyber.png" alt="" title="lrn2cyber: Cyber Education Platform from Scratch" /></a></div>
+						<div class="3u"><a href="images/jmhsrobotix.png" class="image full"><img src="images/jmhsrobotix.png" alt="" title="I fixed the Robotics website with a template because it looked ugly." /></a></div>
+						<div class="3u"><a href="images/academy.png" class="image full"><img src="images/academy.png"" alt="" title="I had a portfolio underneath this site to elaborate on my work at academy." /></a></div>
 						
 					</div> <!-- 
 					<div class="row flush">
