--- a/mhacks/index.html
+++ b/mhacks/index.html
@@ -10,7 +10,19 @@
 </head>
 
 <body>
-
+<h3>
+Mike's Site
+</h3>
+<div class="pure-menu pure-menu-horizontal">
+<ul class="pure-menu-list" style="padding-top: 10px; padding-bottom: 10px">
+        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Projects</a></li>
+        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Background</a></li>
+        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Competitions</a></li>
+        <li class="pure-menu-item"><a href="#" class="pure-menu-link">STEM Advocacy</a></li>
+        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Hiring</a></li>
+        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Interests</a></li>
+</ul>
+</div>
 
 
 </body>
