--- a/mhacks/index.html
+++ b/mhacks/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-<h3>
-Mike's Site
+<h3 style="padding-left: 20px">
+	Mike's Site
 </h3>
 <div class="pure-menu pure-menu-horizontal">
 <ul class="pure-menu-list" style="padding-top: 10px; padding-bottom: 10px">
