idk what i added but I'm pushing ti

--- a/mhacks/index.html
+++ b/mhacks/index.html
@@ -10,9 +10,11 @@
 </head>
 
 <body>
+<div style="color: lightgray">
 <h2 style="padding-left: 20px">
 	Mike's Site
 </h2>
+</div>
 <div class="pure-menu pure-menu-horizontal">
 <ul class="pure-menu-list" style="padding-top: 10px; padding-bottom: 10px">
         <li class="pure-menu-item"><a href="#" class="pure-menu-link">Projects</a></li>
