--- a/mhacks/index.html
+++ b/mhacks/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-<div style="color: lightgray">
+<div style="background-color: lightgray; color: darkgray">
 <h2 style="padding-left: 20px">
 	Mike's Site
 </h2>
