--- a/mhacks/index.html
+++ b/mhacks/index.html
@@ -25,7 +25,10 @@
         <li class="pure-menu-item"><a href="#" class="pure-menu-link">Interests</a></li>
 </ul>
 </div>
+<br><br>
 
+I understand there may be concern regarding whether or not I'm capable of professionally making a site since most of my portfolio is templated so I figured
+I'd go ahead and remodel my site using a somewhat lightweight framework (PureCSS)
 
 </body>
 </html>
