--- a/mhacks/index.html
+++ b/mhacks/index.html
@@ -10,11 +10,11 @@
 </head>
 
 <body>
-<div style="background-color: lightgray; color: white">
-<h2 style="padding-left: 20px">
+<h2 style="padding-left: 20px; color: black; background-color: lightgray">
 	Mike's Site
 </h2>
 </div>
+<div class="pure-menu pure-menu-horizontal">
 <ul class="pure-menu-list" style="padding-top: 10px; padding-bottom: 10px">
         <li class="pure-menu-item"><a href="#" class="pure-menu-link">Projects</a></li>
         <li class="pure-menu-item"><a href="#" class="pure-menu-link">Background</a></li>
