This will at least temporarily work...

--- a/mhacks/index.html
+++ b/mhacks/index.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-<h2 style="padding-left: 20px; color: black; background-color: lightgray">
+<div style="padding-left: 20px; color: black; background-color: lightgray; font-size: 24px; padding-top: 20px; padding-bottom: 20px">
 	Mike's Site
-</h2>
+</div>
 </div>
 <div class="pure-menu pure-menu-horizontal">
 <ul class="pure-menu-list" style="padding-top: 10px; padding-bottom: 10px">
