--- a/mhacks/index.html
+++ b/mhacks/index.html
@@ -25,9 +25,10 @@
 </ul>
 </div>
 <br><br>
-
+<div id="bodycontent" style="padding-left: 15px; padding-right: 15px">
 I understand there may be concern regarding whether or not I'm capable of professionally making a site since most of my portfolio is templated so I figured
-I'd go ahead and remodel my site using a somewhat lightweight framework (PureCSS)
+I'd go ahead and remodel my site using a somewhat lightweight framework (Pure CSS)
 
+</div>
 </body>
 </html>
