See how bottom gray looks

--- a/mhacks/index.html
+++ b/mhacks/index.html
@@ -24,6 +24,9 @@
         <li class="pure-menu-item"><a href="#" class="pure-menu-link">Interests</a></li>
 </ul>
 </div>
+<div style="background-color: lightgray">
+<br>
+</div>
 <br><br>
 <div id="bodycontent" style="padding-left: 15px; padding-right: 15px">
 I understand there may be concern regarding whether or not I'm capable of professionally making a site since most of my portfolio is templated so I figured
