--- a/mhacks/projects.html
+++ b/mhacks/projects.html
@@ -11,12 +11,12 @@
 
 <body>
 <div style="padding-left: 20px; color: black; background-color: lightgray; font-size: 24px; padding-top: 20px; padding-bottom: 20px">
-	Mike's Site
+	<b>Projects</b>
 </div>
 </div>
 <div class="pure-menu pure-menu-horizontal">
 <ul class="pure-menu-list" style="padding-top: 10px; padding-bottom: 10px">
-        <li class="pure-menu-item"><a href="projects.html" class="pure-menu-link">Projects</a></li>
+        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Projects</a></li>
         <li class="pure-menu-item"><a href="#" class="pure-menu-link">Background</a></li>
         <li class="pure-menu-item"><a href="#" class="pure-menu-link">Competitions</a></li>
         <li class="pure-menu-item"><a href="#" class="pure-menu-link">STEM Advocacy</a></li>
