--- a/mhacks/index.html
+++ b/mhacks/index.html
@@ -16,6 +16,7 @@
 </div>
 <div class="pure-menu pure-menu-horizontal">
 <ul class="pure-menu-list" style="padding-top: 10px; padding-bottom: 10px">
+        <li class="pure-menu-item"><a href="index.html" class="pure-menu-link">Home</a></li>
         <li class="pure-menu-item"><a href="projects.html" class="pure-menu-link">Projects</a></li>
         <li class="pure-menu-item"><a href="#" class="pure-menu-link">Background</a></li>
         <li class="pure-menu-item"><a href="#" class="pure-menu-link">Competitions</a></li>
