--- a/mhacks/index.html
+++ b/mhacks/index.html
@@ -18,11 +18,11 @@
 <ul class="pure-menu-list" style="padding-top: 10px; padding-bottom: 10px">
         <li class="pure-menu-item"><a href="index.html" class="pure-menu-link">Home</a></li>
         <li class="pure-menu-item"><a href="projects.html" class="pure-menu-link">Projects</a></li>
-        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Background</a></li>
-        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Competitions</a></li>
-        <li class="pure-menu-item"><a href="#" class="pure-menu-link">STEM Advocacy</a></li>
-        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Hiring</a></li>
-        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Interests</a></li>
+        <li class="pure-menu-item"><a href="background.html" class="pure-menu-link">Background</a></li>
+        <li class="pure-menu-item"><a href="competitions.html" class="pure-menu-link">Competitions</a></li>
+        <li class="pure-menu-item"><a href="stem.html" class="pure-menu-link">STEM Advocacy</a></li>
+        <li class="pure-menu-item"><a href="hiring.html" class="pure-menu-link">Hiring</a></li>
+        <li class="pure-menu-item"><a href="interest.html" class="pure-menu-link">Interests</a></li>
 </ul>
 </div>
 <div style="background-color: lightgray">
