--- a/mhacks/projects.html
+++ b/mhacks/projects.html
@@ -11,17 +11,18 @@
 
 <body>
 <div style="padding-left: 20px; color: black; background-color: lightgray; font-size: 24px; padding-top: 20px; padding-bottom: 20px">
-	<b>Projects</b>
+	Mike's Site
 </div>
 </div>
 <div class="pure-menu pure-menu-horizontal">
 <ul class="pure-menu-list" style="padding-top: 10px; padding-bottom: 10px">
-        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Projects</a></li>
-        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Background</a></li>
-        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Competitions</a></li>
-        <li class="pure-menu-item"><a href="#" class="pure-menu-link">STEM Advocacy</a></li>
-        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Hiring</a></li>
-        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Interests</a></li>
+        <li class="pure-menu-item"><a href="index.html" class="pure-menu-link">Home</a></li>
+        <li class="pure-menu-item"><a href="projects.html" class="pure-menu-link">Projects</a></li>
+        <li class="pure-menu-item"><a href="background.html" class="pure-menu-link">Background</a></li>
+        <li class="pure-menu-item"><a href="competitions.html" class="pure-menu-link">Competitions</a></li>
+        <li class="pure-menu-item"><a href="stem.html" class="pure-menu-link">STEM Advocacy</a></li>
+        <li class="pure-menu-item"><a href="hiring.html" class="pure-menu-link">Hiring</a></li>
+        <li class="pure-menu-item"><a href="interest.html" class="pure-menu-link">Interests</a></li>
 </ul>
 </div>
 <div style="background-color: lightgray">
@@ -29,8 +30,40 @@
 </div>
 <br><br>
 <div id="bodycontent" style="padding-left: 15px; padding-right: 15px">
-I understand there may be concern regarding whether or not I'm capable of professionally making a site since most of my portfolio is templated so I figured
-I'd go ahead and remodel my site using a somewhat lightweight framework (Pure CSS)
+
+<table class="pure-table">
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Repository Name</th>
+            <th>Description</th>
+            <th>Link (If Open Source)</th>
+        </tr>
+    </thead>
+
+    <tbody>
+        <tr>
+            <td>Meanie Chrome</td>
+            <td>meaniechrome</td>
+            <td>In a CCDC round, I was interested when there was apparently a malicious Chrome extension in someone's follow-up talk (one of the red teamers) so I figured I'd make a basic script to inject a js file into a remote browser to see what conventional security is there to stop it. (HSTS helps if attacker is using HTTP, access policy helps but chrome extensions can make themselves excepted, etc). At the end of the day it was extremely successful and could probably be used in a training image. Requires developer mode.</td>
+            <td><a href="https://github.com/mike-bailey/meaniechrome">Link</a></td>
+        </tr>
+
+        <tr>
+            <td>Cyber Scripts</td>
+            <td>cyber-scripts</td>
+            <td>In collaboration with Justice Suh, some different scripts where development meets exploitation.</td>
+            <td><a href="https://github.com/mike-bailey/cyber-scripts">Link</a></td>
+        </tr>
+
+        <tr>
+            <td>PHP Web Shell</td>
+            <td>php-web-shell</td>
+            <td>Justice Suh started a repo (or maybe I did and he helped) where we could deliver a basic PHP file as a remote shell (like c99) and I thought I could make some improvements. Keeping it lean and covert, but still usable. It's supposed to look like a very generic login form, but the username is converted to base64, then the PHP script decodes it and executes it in shell. Very basic but fun for CTFs. Intentionally basic so it's as convert as possible and I can write it down and bring it into competitions.</td>
+            <td><a href="https://github.com/mike-bailey/php-web-shell">Link</a></td>
+        </tr>
+    </tbody>
+</table>
 
 </div>
 </body>
